Commit Ke Tiga MengDevelop App dengan membuat sebuah config yang digunakan untuk mengkoneksi kan database lebih rapi dan juga membuat sebuah migration menggunakan scoop dan migrate pada golang

--- a/example.env
+++ b/example.env
@@ -5,6 +5,6 @@ SITE_TITLE=Example_pos_acen
 
 DB_HOST=localhost
 DB_PORT=5432
-DB_USERNAME=acen
-DB_PASSWORD=Pangkalpinan
+DB_USERNAME=user
+DB_PASSWORD=pass
 DB_NAME=pos_acen
